# Formal-language-typing-game

./: .gitignore  README.md  Toc final.py  main.py  pyproject.toml  requirements.txt
game/: __init__.py  sentences.py  ui.py  validator.py
src/formal_game/: __init__.py  challenges.py  game_engine.py  validator.py
src/formal_game/api/: main.py  state.py
src/formal_game/api/routers/: game.py  leaderboard.py
src/formal_game/api/static/: index.html
tests/: test_api.py  test_validator.py
