[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formal-game"
version = "2.0.0"
description = "Formal Language Typing Game — interactive challenges for regular and context-free languages"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/formal_game"]

[project.scripts]
formal-game-web = "formal_game.api.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
